--- a/jwt/package.json
+++ b/jwt/package.json
@@ -13,6 +13,7 @@
     "deep-freeze": "^0.0.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "jws": "^3.2.2",
